--- a/style.css
+++ b/style.css
@@ -1565,7 +1565,8 @@ box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     align-items: center;
     background-color: #fc5185;
     gap: 20px;
-    margin: 30px;padding: 30px;
+    padding-bottom: 20px;
+   padding-top: 150px;
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
@@ -1635,7 +1636,8 @@ box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
         flex-direction: column;
         background-color: #fc5185;
         gap: 10px;
-        margin: 20px;padding: 20px;
+        margin: 10px;
+       
         border-radius: 10px;
     }
     .package-header h1{
